--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,14 +7,14 @@ id: introduction
 <div class="content">
   <div class="two-third-col">
     <h1>Welcome to tagtog</h1>
-    <p>This is the official documentation for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.net" title="tagtog.net - a text annotation tool ready to train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Served on the cloud or on-premises. <strong>Simple</strong>.</p> 
+    <p>This is the official documentation for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.net" title="tagtog.net - a text annotation tool ready to train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Served on the cloud or on-premises. <strong>Simple</strong>.</p>
     <p><strong>Annotate manually or automatically</strong>. Use already trained machine learning models or train your own model to annotate and work at scale. Simply annotate manually and tagtog will generate a model with no hassle in deployment or maintenance. Save time and costs.</p>
     <p>Invite others to annotate in your projects and <strong>collaborate</strong> to build together awesome stuff: find custom insights in text automatically, augment or index your data, train your own AI, classify text, etc.</p>
     <p>Below are some things you can with tagtog. For more in-depth information or tutorials, use the navigation to the left to explore our documentation.</p>
     <br>
   </div>
   <div class="one-third-col">
-    
+
   </div>
   <div class="two-third-col">
     <h2>What can you achieve?</h2>
@@ -30,7 +30,7 @@ id: introduction
     {% include message.html message='<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3978375/" title="tagtog: interactive and text-mining-assisted annotation of gene mentions in PLOS full-text articles">Read</a> how FlyBase managed to shorten their annotation efforts by 1.6- to 1.9-fold.'%}
   </div>
 
-  
+
   <div class="page-section">
     <div class="two-third-col">
       <div>
@@ -42,7 +42,7 @@ id: introduction
     </div>
     <div class="two-third-col">
       <p class="numbered-item"><span class="number-1">1</span><strong>Provide tagtog with as many initial examples as possible</strong>. Bootstrap a model with pre-annotated data or <a href="/projects.html#dictionaries">dictionaries</a> with the terminology you would like to identify automatically. If you don't have these resources, no worries. Just start from scratch.</p>
-      
+
       <p class="numbered-item"><span class="number-2">2</span><strong>Train a model</strong>: import text (cloud or on-premises) through the <a href="/API.html">API</a> or the user interface. The text is annotated automatically. You or a team just need to correct the wrong model predictions in the annotation editor. Repeat this step until you get the accuracy level required.</p>
       <p class="numbered-item"><span class="number-3">3</span><strong>Congratulations! You get a machine learning model ready for production use</strong>. Simply send text to the API or user interface to retrieve relevant insights. If you detect any problem with the results, you can always continue annotating to fine tune the model.</p>
     </div>
@@ -75,7 +75,7 @@ id: introduction
       <p>With tagtog you can quickly create training data to feed your AI models.</p>
     </div>
     <div class="one-third-col">
-      
+
     </div>
     <div class="two-third-col">
       <p class="numbered-item"><span class="number-1">1</span><strong>Use tagtog to annotate text and create training data</strong>. This is a collaborative tool, so you can invite others to share the effort. Augment your data: label documents, annotate text, relations, etc. Export this data to your model to train it.</p>
@@ -126,7 +126,7 @@ id: introduction
       </div>
       <div class="one-third-col">
         {% include message.html message='tagtog supports <a href="https://medium.com/@tagtog/overlapping-text-annotations-19d7ac5b247a" title="Medium - Overlapping text annotations, gain flexibility">overlapping text annotations</a> and full-text articles.' %}
-        
+
       </div>
       <div class="two-third-col">
         <table style="width:100%">
@@ -160,9 +160,9 @@ id: introduction
       <div class="one-third-col">
         {% include message.html message='Support for annotations in text and annotations at document level' %}
       </div>
-      
+
     </div>
-  
+
 
   <div class="page-section">
     <h2>Team collaboration</h2>
@@ -176,13 +176,13 @@ id: introduction
     </div>
   </div>
 
-  
+
   <div class="page-section">
     <div class="two-third-col">
       <h2>Cloud or On-premises</h2>
       <table class="clean-table">
         <tr>
-          <td><strong>On the Cloud</strong>. For using tagtog on the cloud you don't need to install anything just <a href="https://www.tagtog.net/#signup" title="Sign up at tagtog.net">sign up</a>, create a project and start annotating. Out of these annotations you can create and use a machine learning model without worrying about hardware requirements, databases, scalability, deployments and any other hassle or cost related to setting up a production environment and maintaining it.</td>
+          <td><strong>On the Cloud</strong>. To use tagtog on the cloud, <strong>you don't need to install anything</strong>; just <a href="https://www.tagtog.net/#signup" title="Sign up at tagtog.net">sign up</a>, create a project, and start annotating. Out of these annotations you can create and use a machine learning model without worrying about hardware requirements, databases, scalability, deployments and any other hassle or cost related to setting up a production environment and maintaining it.</td>
           <td class="centered" style="width:15%">{% include image.html name="tagtog_cloud.svg" %}</td>
         </tr>
         <tr>
@@ -215,8 +215,8 @@ id: introduction
       {% include message.html message="The user interface will help you to build the search queries" %}
     </div>
   </div>
-  
-  
+
+
   <div class="page-section">
     <div class="two-third-col">
       <h2>Import text from known sources</h2>
