--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,11 +12,7 @@ id: introduction
     <p>Invite others to annotate in your projects and <strong>collaborate</strong> to build together awesome stuff: find custom insights in text automatically, augment or index your data, train your own AI, classify text, etc.</p>
     <p>Below are some things you can with tagtog. For more in-depth information or tutorials, use the navigation to the left to explore our documentation.</p>
     <br>
-  </div>
-  <div class="one-third-col">
 
-  </div>
-  <div class="two-third-col">
     <h2>What can you achieve?</h2>
     <div class="page-section">
       <h3>Manual text annotation</h3>
@@ -27,6 +23,7 @@ id: introduction
     </div>
   </div>
   <div class="one-third-col">
+    {% include image.html name="robot.teacher.svg" width=300 %}
     {% include message.html message='<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3978375/" title="tagtog: interactive and text-mining-assisted annotation of gene mentions in PLOS full-text articles">Read</a> how FlyBase managed to shorten their annotation efforts by 1.6- to 1.9-fold.'%}
   </div>
 
