rename: Github --> GitHub

--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -1,7 +1,7 @@
 <nav id="sidebar-icon-links">
   {% if site.github.repo %}
     <a id="github-link"
-       class="icon" title="Github" aria-label="Github"
+       class="icon" title="GitHub" aria-label="GitHub"
        href="{{ site.github.repo }}">
       {% include svg/github.svg %}
     </a>
