--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,5 +6,5 @@ layout: default
   <h1 class="page-title">{{ page.title }}</h1>
 </header>
 <div class="content">
-  {{ content }}
+  {{ content | toc }}
 </div>
