Fix toc for prod

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,4 +1,5 @@
 <!-- Additional head bits without overriding original head -->
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/toc.js"></script>
 <script src="{{ site.baseurl }}/assets/js/main.js" /></script>
 <script src="{{ site.baseurl }}/assets/js/anchor.min.js"></script>
