--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
   <link href="{{ site.baseurl }}/assets/css/syntax.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/css/toc.css" rel="stylesheet">
 
   {% include font-includes.html %}
 
