--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,10 @@ layout: default
 <header>
   <h1 class="page-title">{{ page.title }}</h1>
 </header>
-<div class="content">
-  {{ content | toc }}
+{% if page.notoc %}
+{% else %}
+  <div id="toc"></div>
+{% endif %}
+<div class="content" id="main-content">
+  {{ content }}
 </div>
