Add PDF info to intro page

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,6 +20,8 @@ id: introduction
       <p>Too much work for a single person? <a href="#team-collaboration">Invite others and work in group</a>. Each annotator can annotate the same text to facilitate the review process. Once the annotations are completed, you can export them to JSON format.</p>
       {% include image.html name="annotation_editor.png" caption="Named Entity Recognition with tagtog annotation editor" %}
       <p>Not fast enough? Use automatic annotations to speed up annotator tasks. Use trained models or customize your own. Users will see the automatic annotations and just make an action when predictions are wrong. Powered by <strong>NLP</strong> and <strong>active learning</strong> algorithms, tagtog uses the corrections to improve accuracy and <strong>continuously reduce the load of annotators' work</strong>.</p>
+      <p>Do you need to deal with <strong>PDFs</strong>? {% include inline-image.html name="icon-pdf.png" width="30" %} Use the <a title="tagtog - PDF annotation tool" href="pdf-annotation-tool.html">PDF Annotation tool</a> to annotate native PDFs within tagtog.</p>
+      {% include image.html name="pdf-annotation.jpg"  caption="Annotate PDF natively, as they are and the way your team is used to work with them " %}
     </div>
   </div>
   <div class="one-third-col">
@@ -121,6 +123,7 @@ id: introduction
         <p>tagtog comes with an advanced text annotation tool for <strong>data augmentation</strong>. Its design is based on the feedback from annotator groups.</p>
         <p><strong>Focus</strong> is key in order to generate a high-quality annotated corpora, and we know this. Each single mistake in the annotations means a step backward and more effort to achieve the desired results. With this in mind and to make the user feel comfortable while reading, we have created a <strong>minimalist user interface</strong> where the text is presented with natural spacing, same as any user can be familiar with. By <strong>protecting the reading experience</strong> the tool is more accessible. This is specially important when you involve subject matter experts in your annotation projects.</p>
         <p>Usually annotation tasks involve dealing with big volumes of texts. <strong>Speed and efficiency</strong> are essential to minimize costs and time. tagtog includes features as automatic annotations, overlapping text annotations or full-text annotation, that reduce significantly the time required to annotate text.</p>
+        <p>Do you need to annotate or process PDFs? Use the <a title="tagtog - PDF annotation tool" href="pdf-annotation-tool.html">PDF annotation tool</a>, it is fully integrated with tagtog web interface.</p>
         <p>With the annotation editor you can add different types of annotations:</p>
       </div>
       <div class="one-third-col">
