Add documentation regarding the feature to add doc labels before uploading doc in the GUI

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -209,7 +209,7 @@ id: introduction
     <div class="one-third-col"></div>
 
     <div class="two-third-col">
-      <p>This search engine can be used through the <strong>user interface or the <a href="/API.html">API</a></strong>. You can use directly the API as your search interface or simply augment your existing engine.</p>
+      <p>This search engine can be used through the <strong>user interface or the <a title="tagtog - API" href="/API.html">API</a></strong>. You can use directly the API as your search interface or simply augment your existing engine.</p>
       <p>Annotators can use it to find texts that are not annotated yet or documents related to their specific annotation task. </p>
       <p><a href="/search.html">Continue reading</a></p>
     </div>
