--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,6 +19,7 @@ id: introduction
       <p>Use the text annotation editor to quickly annotate and normalize entities, relations and <a title="tagtog-docs: type of annotations" href="/webeditor.html#annotation-types">more</a>. If you just need to annotate at document level, you can use labels to tag documents. The <strong>user interface adapts automatically so you only see what you need</strong>. No more complex or non-intuitive annotating systems/interfaces, engage your domain experts from the very beginning.</p>
       <p>Too much work for a single person? <a href="#team-collaboration">Invite others and work in group</a>. Each annotator can annotate the same text to facilitate the review process. Once the annotations are completed, you can export them to JSON format.</p>
       {% include image.html name="annotation_editor.png" caption="Named Entity Recognition with tagtog annotation editor" %}
+      {% include image.html name="editor-mainview-described.jpg" caption="Editor layout. In this examples there are entities, entity labels, document labels, relations and normalizations" %}
       <p>Not fast enough? Use automatic annotations to speed up annotator tasks. Use trained models or customize your own. Users will see the automatic annotations and just make an action when predictions are wrong. Powered by <strong>NLP</strong> and <strong>active learning</strong> algorithms, tagtog uses the corrections to improve accuracy and <strong>continuously reduce the load of annotators' work</strong>.</p>
       <p>Do you need to deal with <strong>PDFs</strong>? {% include inline-image.html name="icon-pdf.png" width="30" %} Use the <a title="tagtog - PDF annotation tool" href="pdf-annotation-tool.html">PDF Annotation tool</a> to annotate native PDFs within tagtog.</p>
       {% include image.html name="pdf-annotation.jpg"  caption="Annotate PDF natively, as they are and the way your team is used to work with them " %}
@@ -146,7 +147,7 @@ id: introduction
           </tr>
           <tr>
             <td>Entity label</td>
-            <td>Label (boolean, string, enum) assigned to a named entity. Let's say you are extracting technical issues from reports in a CRM. When annotating those reports, you can add extra information to those entities (technical issues), for example, the severity for each of them.</td>
+            <td><p>Attribute (boolean, string, enum) assigned to a named entity. Let's say you are extracting technical issues from reports in a CRM. When annotating those reports, you can add extra information to those entities (technical issues), for example, the severity for each of them.</p><p>Entity labels can be used with specific entity groups (e.g. only can be set for technical issues) or to all entities (e.g. we can set comments for all entities)</p></td>
           </tr>
           <tr>
             <td>Relation</td>
