rewrite API URL

--- a/site/_layouts/index.html
+++ b/site/_layouts/index.html
@@ -45,7 +45,7 @@ id: introduction
     <div class="two-third-col">
       <p class="numbered-item"><span class="number-1">1</span><strong>Provide tagtog with as many initial examples as possible</strong>. Bootstrap a model with pre-annotated data or <a href="/projects.html#dictionaries">dictionaries</a> with the terminology you would like to identify automatically. If you don't have these resources, no worries. Just start from scratch.</p>
 
-      <p class="numbered-item"><span class="number-2">2</span><strong>Train a model</strong>: import text (cloud or on-premises) through the <a href="/API.html">API</a> or the user interface. The text is annotated automatically. You or a team just need to correct the wrong model predictions in the annotation editor. Repeat this step until you get the accuracy level required.</p>
+      <p class="numbered-item"><span class="number-2">2</span><strong>Train a model</strong>: import text (cloud or on-premises) through the <a href="/API_documents_v1.html">API</a> or the user interface. The text is annotated automatically. You or a team just need to correct the wrong model predictions in the annotation editor. Repeat this step until you get the accuracy level required.</p>
       <p class="numbered-item"><span class="number-3">3</span><strong>Congratulations! You get a machine learning model ready for production use</strong>. Simply send text to the API or user interface to retrieve relevant insights. If you detect any problem with the results, you can always continue annotating to fine tune the model.</p>
     </div>
     <div class="one-third-col">
@@ -64,7 +64,7 @@ id: introduction
     <div class="two-third-col">
       <p class="numbered-item"><span class="number-1">1</span><strong>Train a machine learning model</strong> as described in the previous use case or use an <a href="#pre-trained-models">already trained model</a>.</p>
       <p class="numbered-item"><span class="number-2">2</span><strong>Send your text</strong> items to tagtog using the API. Get the annotations in JSON format and decide whether to store these in your own system or keep them at tagtog. Your data is indexed.</p>
-      <p class="numbered-item"><span class="number-3">3</span>If you keep these annotations at tagtog, you can <strong>use the concept <a href="/API.html#search-documents-in-a-project-get">search via API</a> as your search engine</strong>. Otherwise, you can store this data locally as meta-information for your own search engine.</p>
+      <p class="numbered-item"><span class="number-3">3</span>If you keep these annotations at tagtog, you can <strong>use the concept <a href="/API_documents_v1.html#search-documents-in-a-project-get">search via API</a> as your search engine</strong>. Otherwise, you can store this data locally as meta-information for your own search engine.</p>
     </div>
     <div class="one-third-col">
       {% include image.html name="diagram_index.svg" %}
@@ -210,7 +210,7 @@ id: introduction
     <div class="one-third-col"></div>
 
     <div class="two-third-col">
-      <p>This search engine can be used through the <strong>user interface or the <a title="tagtog - API" href="/API.html">API</a></strong>. You can use directly the API as your search interface or simply augment your existing engine.</p>
+      <p>This search engine can be used through the <strong>user interface or the <a title="tagtog - API" href="/API_documents_v1.html">API</a></strong>. You can use directly the API as your search interface or simply augment your existing engine.</p>
       <p>Annotators can use it to find texts that are not annotated yet or documents related to their specific annotation task. </p>
       <p><a href="/search.html">Continue reading</a></p>
     </div>
