--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,13 @@
       <a href="{{ site.app_url }}/">
         <img class="logo" src="/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.net" alt="Go to web app at tagtog.net">
       </a>
-
+    </div>
+    <div class="search-box">
+      <form action="/search-engine.html" method="get">
+        <label for="search-box">Search</label>
+        <input type="text" id="search_box" name="query">
+        <input type="submit" value="search">
+      </form>
     </div>
   </header>
   {% include sidebar-nav-links.html %}
