--- a/_includes/search-results.html
+++ b/_includes/search-results.html
@@ -1,17 +1,29 @@
+<meta charset="utf-8"> 
+
+<div class="search-engine-box">
+    <form action="/search-engine.html" method="get">
+      <label for="search-box">Search</label>
+      <input type="text" id="search_box" name="query">
+      <input type="submit" value="search">
+    </form>
+  </div>
+
 <ul id="search-results"></ul>
 
-<!---
 <script>
-  window.store = {
-    {% for post in site.posts %}
-      "{{ post.url | slugify }}": {
-        "title": "{{ post.title | xml_escape }}",
-        "author": "{{ post.author | xml_escape }}",
-        "category": "{{ post.category | xml_escape }}",
-        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-        "url": "{{ post.url | xml_escape }}"
-      }
-      {% unless forloop.last %},{% endunless %}
-    {% endfor %}
-  };
-</script>-->
+    window.store = {
+        {% for doc in site.pages %}
+            {% unless doc.title == "anndoc format" or doc.title contains "Inputs" or doc.title contains "Machine Learning" or doc.title contains "PDF " or doc.title contains "Quick " or doc.title contains "Search queries" or doc.title contains "Updates"%}
+                "{{ doc.url | slugify }}": {
+                    "title": "{{ doc.title | xml_escape }}",
+                    "content": {{ doc.content | strip_html | strip_newlines | jsonify }},
+                    "url": "{{ doc.url | xml_escape }}"
+                }
+                {% unless forloop.last %},{% endunless %}
+            {% endunless %}
+        {% endfor %}
+    };
+</script>
+
+<script src="/assets/js/lunr.min.js"></script>
+<script src="/assets/js/search.js"></script>    
