--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
         <img class="logo" src="/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.net" alt="Go to web app at tagtog.net">
       </a>
     </div>
-    <div class="search-box">
+    <div class="search-engine-box">
       <form action="/search-engine.html" method="get">
         <label for="search-box">Search</label>
         <input type="text" id="search_box" name="query">
