--- a/_includes/search-results.html
+++ b/_includes/search-results.html
@@ -3,7 +3,7 @@
 <div class="search-engine-box">
     <form action="/search-engine.html" method="get">
       <label for="search-box">Search</label>
-      <input type="text" id="search_box" name="query">
+      <input type="text" id="search_box" name="query" onkeypress="searchResults('search_box')">
       <input type="submit" value="search">
     </form>
   </div>
@@ -26,4 +26,5 @@
 </script>
 
 <script src="/assets/js/lunr.min.js"></script>
-<script src="/assets/js/search.js"></script>    
+<script src="/assets/js/search.js"></script>
+<script src="/assets/js/dynamic-search.js"> </script>    
