--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,11 +4,11 @@
   <header>
     <div class="site-title">
       <a href="{{ site.app_url }}/">
-        <img class="logo" src="/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.net" alt="Go to web app at tagtog.net">
+        <img class="logo" src="{{ site.baseurl }}/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.net" alt="Go to web app at tagtog.net">
       </a>
     </div>
     <div class="sidebar-search-engine-box">
-      <form action="/search-results.html" method="get">
+      <form action="/{{site.baseurl}}/search-results.html" method="get">
         <input id="sidebar-search-engine-form" class="sidebar-search-input" name="query">
       </form>
     </div>
