--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-  <!-- OG emtas - Twitter cards -->
+  <!-- OG metas - Twitter cards -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@tagtog_net" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="docs.tagtog.net" />
   <meta property="og:title" content="tagtog documentation" />
-  <meta property="og:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Served on the Cloud or On-Premises" />
+  <meta property="og:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Available on the Cloud or On-Premises." />
   <meta property="og:image" content="https://docs.tagtog.net/assets/img/circle_2leafstext.png" />
 
   <title>
