remove append div

--- a/_includes/lunr-search.html
+++ b/_includes/lunr-search.html
@@ -74,7 +74,7 @@
           searchitem +=   "</li>"
           resultdiv.append(searchitem);
         }
-        resultdiv.append('</ul>')
+        //resultdiv.append('</ul>')
       });
     });
 </script>
