--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@ id: introduction
 <div class="content">
   <div class="two-third-col">
     <h1>Welcome to tagtog</h1>
-    <p>This is the official documentation for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.net" title="tagtog.net - The Text Annotation Tool to Train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Served on the cloud or on-premises. <strong>Easy</strong>.</p>
+    <p>This is the official documentation for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.net" title="tagtog.net - The Text Annotation Tool to Train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Available on the cloud and on-premises. <strong>Easy</strong>.</p>
     <p><strong>Annotate manually or automatically</strong>. Use already trained machine learning models or train your own model to annotate and work at scale. Simply annotate manually and tagtog will generate a model with no hassle in deployment or maintenance. Save time and costs.</p>
     <p>Invite others to annotate in your projects and <strong>collaborate</strong> to build together awesome stuff: find custom insights in text automatically, augment or index your data, train your own AI, classify text, etc.</p>
     <p>Below are some things you can with tagtog. For more in-depth information or tutorials, use the navigation to the left to explore our documentation.</p>
