write https docs everywhere

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@tagtog_net" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://docs.tagtog.net" />
+  <meta property="og:url" content="https://docs.tagtog.net" />
   <meta property="og:title" content="tagtog documentation" />
   <meta property="og:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Available on the Cloud and On-Premises." />
   <meta property="og:image" content="https://docs.tagtog.net/assets/img/circle_2leafstext.png" />
