--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
       </a>
     </div>
     <div class="sidebar-search-engine-box">
-      <form action="/{{site.baseurl}}/search-results.html" method="get">
+      <form action="{{site.baseurl}}/search-results.html" method="get">
         <input id="sidebar-search-engine-form" class="sidebar-search-input" name="query">
       </form>
     </div>
