--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,12 +9,12 @@
     </div>
     <div class="sidebar-search-engine-box">
       <form action="{{site.baseurl}}/search-results.html" method="get">
-        <input id="sidebar-search-engine-form" class="sidebar-search-input" name="query">
+        <input id="sidebar-search-engine-form" class="sidebar-search-input" name="query" placeholder="Search...">
       </form>
     </div>
   </header>
   {% include sidebar-nav-links.html %}
 
-  {% include sidebar-icon-links.html %} 
+  {% include sidebar-icon-links.html %}
   {% include copyright.html %}
 </div>
