--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -1,19 +1,32 @@
 .search-input{
-    border: 1px solid #e5e5e5;
-    border-radius: 200px;
-    height: 30px;
-    width: 30%;
-    /* background: rgba(0,0,0,0.17) url(/assets/img/search-button.png) no-repeat; */
+  border: 1px solid #dbdbdb;
+  border-radius: 10px;
+  height: 30px;
+  width: 30%;
+  font-size: inherit;
+  color: inherit;
+  padding: 20px 10px;
+  /* background: rgba(0,0,0,0.17) url(/assets/img/search-button.png) no-repeat; */
 }
 
 .search-results{
-    margin-top: 20px;
+  margin: 20px 0 40px 0;
+  list-style: none;
+}
+
+.search-results h4 {
+  color: inherit;
 }
 
 .search-results li{
-    border-bottom: 1px solid #808080;
+  border-bottom: 1px solid #dbdbdb;
 }
 
-.search-results li:first-child {
-    border-top: 1px solid #808080;
+.search-results li:last-child {
+  border-bottom: none;
+}
+
+.results_found {
+  margin-top: 10px;
+  font-size: medium;
 }
