--- a/_includes/lunr-search.html
+++ b/_includes/lunr-search.html
@@ -1,4 +1,4 @@
-<script src="/assets/js/lunr.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.6/lunr.min.js"></script>
 <script src="/assets/js/lunr.stemmer.support.min.js"></script>
 <script src='/assets/js/search-data.json'></script>
 <link rel="stylesheet" type="text/css" href="/assets/css/search.css">
