--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -2,7 +2,6 @@
   border: 1px solid #dbdbdb;
   border-radius: 10px;
   height: 30px;
-  width: 30%;
   font-size: inherit;
   color: inherit;
   padding: 20px 10px;
@@ -29,4 +28,36 @@
 .results_found {
   margin-top: 10px;
   font-size: medium;
+}
+
+.autocomplete {
+  position: relative;
+  display: inline-block;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9; 
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important; 
+  color: #ffffff; 
 }
