--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,14 +6,28 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-  <!-- OG metas - Twitter cards -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@tagtog_net" />
+
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://docs.tagtog.net" />
-  <meta property="og:title" content="tagtog documentation" />
-  <meta property="og:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Available on the Cloud and On-Premises." />
-  <meta property="og:image" content="https://docs.tagtog.net/assets/img/circle_2leafstext.png" />
+  <meta property="og:site_name" content="tagtog" />
+  <meta property="og:image" content="https://www.tagtog.net/-assets/images/front/laptop_tagtog_full_left.png" />
+  <meta name="twitter:site" content="@tagtog_net" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  {% if page.title == "Home" %}
+    <meta property="og:url" content="https://docs.tagtog.net" />
+    <meta property="og:title" content="tagtog documentation" />
+    <meta property="og:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Available on the Cloud and On-Premises." />
+    <meta property="twitter:title" content="tagtog documentation" />
+    <meta property="twitter:description" content="This is the official documentation for tagtog, the text annotation tool to train AI. Available on the Cloud and On-Premises." />
+  {% else %}
+    <meta property="og:url" content="{{ site.url }}{{page.url}}"/>
+    <meta property="og:title" content="{{page.title}}" />
+    <meta property="og:description" content="{{ page.content | strip_html | truncatewords:40 }}" />
+    <meta name="twitter:description" content="{{ page.content | strip_html | truncatewords:40 }}" />
+    <meta name="twitter:title" content="{{page.title}}" />
+  {% endif %}
+
+
 
   <title>
     {% if page.title == "Home" %}
