--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -37,27 +37,40 @@
 
 .autocomplete-items {
   position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
+  border-radius: 8px;
+  overflow: hidden;
   z-index: 99;
   /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
+  top: 98%;
   left: 0;
   right: 0;
+
 }
-.autocomplete-items div {
+.autocomplete-items > div {
   padding: 10px;
   cursor: pointer;
-  background-color: #fff; 
-  border-bottom: 1px solid #d4d4d4; 
+  background-color: #fff;
+  border: 1px solid #d4d4d4;
+  border-top: none;
+}
+
+.autocomplete-items > div:nth-child(1) {
+  border-top: 1px solid #d4d4d4;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+
+}
+.autocomplete-items > div:nth-last-child(1) {
+  border-bottom: 1px solid #d4d4d4;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 .autocomplete-items div:hover {
   /*when hovering an item:*/
-  background-color: #e9e9e9; 
+  background-color: #e9e9e9;
 }
 .autocomplete-active {
   /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important; 
-  color: #ffffff; 
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
