--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -23,7 +23,7 @@
 */
 
 @mixin number-x {
-  $list-colors: #ece919, #e7901e, #e74d1e, #b31884, #a234d5, #5b22f7, #0769b9;
+  $list-colors: #ece919, #e7901e, #e74d1e, #b31884, #a234d5, #5b22f7, #0769b9, #0e8ce0, #196b80, #14b4ac;
   $item-list: null;
   $item-list-regular: null;
   @for $i from 1 through (length($list-colors) - 1) {
