rename: On-premises --> OnPremises (also taken care of changing link anchors)

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -178,7 +178,7 @@ id: introduction
 
   <div class="page-section">
     <div class="two-third-col">
-      <h2>Cloud or On-premises</h2>
+      <h2>Cloud or OnPremises</h2>
       <table class="clean-table">
         <tr>
           <td><strong>On the Cloud</strong>. To use tagtog on the cloud, <strong>you don't need to install anything</strong>; just <a href="https://www.tagtog.net/#signup" title="Sign up at tagtog.net">sign up</a>, create a project, and start annotating. Out of these annotations you can create and use a machine learning model without worrying about hardware requirements, databases, scalability, deployments and any other hassle or cost related to setting up a production environment and maintaining it.</td>
@@ -190,7 +190,7 @@ id: introduction
         </tr>
         <tr>
           <td>
-            <p><strong>On-premises</strong>. If you need to meet strong privacy regulations, legal requirements, or you simply want to make a custom installation within your infrastructure or any public cloud (AWS, Google, Azure, etc) , tagtog is also served on-premises. This is a self-contained version (no Internet connection is required) of tagtog, <strong>no data will leave your infrastructure</strong>. To make the installation the easiest possible we offer tagtog contained in a <a href="https://www.docker.com/" title="Docker official site"><strong>Docker</strong></a> image. <a href="on_premises_README.html">Check our on-premises guide</a>.</p>
+            <p><strong>OnPremises</strong>. If you need to meet strong privacy regulations, legal requirements, or you simply want to make a custom installation within your infrastructure or any public cloud (AWS, Google, Azure, etc) , tagtog is also served on-premises. This is a self-contained version (no Internet connection is required) of tagtog, <strong>no data will leave your infrastructure</strong>. To make the installation the easiest possible we offer tagtog contained in a <a href="https://www.docker.com/" title="Docker official site"><strong>Docker</strong></a> image. <a href="on_premises_README.html">Check our on-premises guide</a>.</p>
             <p>There is available support for <strong>Single Sign-on</strong> and <strong>advanced user management</strong> (user groups, roles and permissions). All through an intuitive <a href="on-premises-sysadmin.html">sysadmin panel</a>.</p>
           </td>
           <td class="centered" style="width:15%">{% include image.html name="docker.svg" %}</td>
